2014-09-03      Gaius Mulley <gaius@gnu.org>

	* libgm2/config.h.in:  rebuilt.
	* libgm2/configure:  rebuilt.
	* libgm2/configure.ac:  fixes to the GM2_CHECK_LIB macro to correctly
	  test for the existence of library functions.

2014-09-02      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  removed unnecessary SO, SO_O2, O2 library build
	  rules.
	* gm2/gm2-compiler/SymbolTable.mod:  removed unnecessary Type, Size, Offset
	  fields from Module, DefImp symbols.  Also removed their initialisation.

2014-08-30      Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/gm2m.bnf:  fixed bug so that nested local modules
	  propagate their imported modules outwards.
	  (see testsuite/gm2/imports/run/pass/innermods3.mod).
	* gm2/bnf/m2.bnf:  corrected dates.
	* gm2/bnf/gm2l.bnf:  commented out printfs.
	* rebuild the all configure files changed by the gm2 front
	  end.
	* rebuilt all patch files.
	  (gm2/patches/gcc/4.7.3/01-patches, gm2/patches/gcc/4.7.3/02-patches,
           gm2/patches/gcc/4.7.3/03-patches, gm2/patches/gcc/4.7.3/04-patches,
           gm2/patches/gcc/4.7.3/05-patches, gm2/patches/gcc/4.7.3/12-patches)

2014-08-29      Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/gm2m.bnf:  fixed bug reported by John O Goyo
	  (see testsuite/gm2/imports/run/pass/innermods.mod and
	   testsuite/gm2/imports/run/pass/innermods2.mod).
	  Maintain a block of nested modules and allow inner modules
	  to import objects via FROM x statements.  (BeginBlock)
	  New procedure.  (EndBlock) New procedure.  (RegisterLocalModule)
	  New procedure.  (RegisterImport) New procedure.  The ebnf
	  rules were extended to nearly the complete language (with the exception
	  of full parsing of definition modules).  Similar to gm2l except
	  the block retains the module level.

2014-08-28      Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/gm2l.bnf:  fixed bug reported by John O Goyo
	  (see testsuite/gm2/imports/run/pass/innermods.mod).
	  Maintain a block of nested modules and allow inner modules