@@ -30,6 +30,11 @@ if test x$regex_flex = "x" ; then
     AC_MSG_ERROR([flex is required to build GNU Modula-2 (hint install flex).])
 fi
 
+AC_CHECK_LIB(pth, pselect, [], [pth_found=0])
+if test $pth_found == 0 ; then
+   AC_MSG_WARN([libpth is likely required during linking if the compiler is to be used natively.])
+fi
+
 AC_DEFINE_UNQUOTED(AR_PATH, "$AR_PATH", the path to target archiver)
 AC_PATH_PROGS(RANLIB_PATH, ${RANLIB}, ranlib)
 AC_DEFINE_UNQUOTED(RANLIB_PATH, "$RANLIB_PATH", the path to target ranlib)
